@@ -29,17 +29,15 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.service.persistent.PersistentTopic;
 import org.apache.pulsar.client.admin.PulsarAdmin;
 import org.apache.pulsar.client.admin.PulsarAdminException;
-import org.apache.pulsar.client.api.PulsarClientException;
 import org.apache.pulsar.client.api.SubscriptionType;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.policies.data.AutoSubscriptionCreationOverride;
-import org.apache.pulsar.common.policies.data.DispatchRate;
+import org.apache.pulsar.common.policies.data.BacklogQuota;
 import org.apache.pulsar.common.policies.data.DelayedDeliveryPolicies;
+import org.apache.pulsar.common.policies.data.DispatchRate;
 import org.apache.pulsar.common.policies.data.InactiveTopicDeleteMode;
 import org.apache.pulsar.common.policies.data.InactiveTopicPolicies;
 import org.apache.pulsar.common.policies.data.OffloadPoliciesImpl;
@@ -55,9 +53,9 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 /**
- * Starts 3 brokers that are in 3 different clusters
+ * Starts 3 brokers that are in 3 different clusters.
  */
-@Test(groups = "broker")
+@Test(groups = "broker-replication")
 public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
 
     @Override
@@ -84,6 +82,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         BacklogQuotaImpl backlogQuota = new BacklogQuotaImpl();
         backlogQuota.setLimitSize(1);
         backlogQuota.setLimitTime(2);
+        backlogQuota.setPolicy(BacklogQuota.RetentionPolicy.producer_exception);
         // local
         admin1.topicPolicies().setBacklogQuota(topic, backlogQuota);
         Awaitility.await().untilAsserted(() ->
@@ -222,8 +221,8 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         Awaitility.await().untilAsserted(() -> condition.apply(admin3));
     }
 
-    private interface ThrowingConsumer<I> {
-        void apply(I input) throws Throwable;
+    private interface ThrowingConsumer<T> {
+        void apply(T input) throws Throwable;
     }
 
 
@@ -716,9 +715,9 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         Awaitility.await().untilAsserted(() ->
                 assertNull(admin3.topicPolicies().getOffloadPolicies(persistentTopicName)));
         // global
-        try{
+        try {
             admin1.topicPolicies(true).setOffloadPolicies(persistentTopicName, offloadPolicies);
-        }catch (Exception exception){
+        } catch (Exception exception) {
             // driver not found exception.
             assertTrue(exception instanceof PulsarAdminException.ServerSideErrorException);
         }
@@ -750,7 +749,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         assertNotNull(topicRef);
 
         Awaitility.await().untilAsserted(() -> {
-            List<String> replicaClusters = topicRef.getReplicators().keys().stream().sorted().collect(Collectors.toList());
+            List<String> replicaClusters = topicRef.getReplicators().keySet().stream().sorted().toList();
             assertEquals(replicaClusters.size(), 1);
             assertEquals(replicaClusters.toString(), "[r2]");
         });
@@ -758,7 +757,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         // removing topic replica cluster policy, so namespace policy should take effect
         admin1.topics().removeReplicationClusters(persistentTopicName);
         Awaitility.await().untilAsserted(() -> {
-            List<String> replicaClusters = topicRef.getReplicators().keys().stream().sorted().collect(Collectors.toList());
+            List<String> replicaClusters = topicRef.getReplicators().keySet().stream().sorted().toList();
             assertEquals(replicaClusters.size(), 2);
             assertEquals(replicaClusters.toString(), "[r2, r3]");
         });
@@ -770,8 +769,8 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         final String topic = "persistent://" + namespace + "/topic" + UUID.randomUUID();
         init(namespace, topic);
 
-        AutoSubscriptionCreationOverride autoSubscriptionCreationOverride
-                = AutoSubscriptionCreationOverride.builder().allowAutoSubscriptionCreation(true).build();
+        AutoSubscriptionCreationOverride autoSubscriptionCreationOverride =
+                AutoSubscriptionCreationOverride.builder().allowAutoSubscriptionCreation(true).build();
         // local
         admin1.topicPolicies().setAutoSubscriptionCreation(topic, autoSubscriptionCreationOverride);
         Awaitility.await().untilAsserted(() ->
@@ -792,8 +791,7 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
                 assertNull(admin3.topicPolicies(true).getAutoSubscriptionCreation(topic, false)));
     }
 
-    private void init(String namespace, String topic)
-            throws PulsarAdminException, PulsarClientException, PulsarServerException {
+    private void init(String namespace, String topic) throws Exception {
         final String cluster2 = pulsar2.getConfig().getClusterName();
         final String cluster1 = pulsar1.getConfig().getClusterName();
         final String cluster3 = pulsar3.getConfig().getClusterName();
@@ -817,11 +815,9 @@ public class ReplicatorTopicPoliciesTest extends ReplicatorTestBase {
         pulsar3.getClient().newProducer().topic(topic).create().close();
 
         //init topic policies server
-        Awaitility.await().ignoreExceptions().untilAsserted(() -> {
-            assertNull(pulsar1.getTopicPoliciesService().getTopicPolicies(TopicName.get(topic)));
-            assertNull(pulsar2.getTopicPoliciesService().getTopicPolicies(TopicName.get(topic)));
-            assertNull(pulsar3.getTopicPoliciesService().getTopicPolicies(TopicName.get(topic)));
-        });
+        TopicPolicyTestUtils.getTopicPolicies(pulsar1.getTopicPoliciesService(), TopicName.get(topic));
+        TopicPolicyTestUtils.getTopicPolicies(pulsar2.getTopicPoliciesService(), TopicName.get(topic));
+        TopicPolicyTestUtils.getTopicPolicies(pulsar3.getTopicPoliciesService(), TopicName.get(topic));
     }
 
 }
