@@ -25,8 +25,8 @@ import static org.testng.Assert.assertTrue;
 import java.lang.reflect.Field;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import com.google.common.collect.ImmutableSet;
 import lombok.Cleanup;
 import org.apache.pulsar.client.api.MessageId;
 import org.apache.pulsar.client.api.PulsarClient;
@@ -56,27 +56,27 @@ public class BuildersTest {
 
     @Test
     public void enableTlsTest() {
-        ClientBuilderImpl builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("pulsar://service:6650");
+        ClientBuilderImpl builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("pulsar://service:6650");
         assertFalse(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "pulsar://service:6650");
 
-        builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("http://service:6650");
+        builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("http://service:6650");
         assertFalse(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "http://service:6650");
 
-        builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("pulsar+ssl://service:6650");
+        builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("pulsar+ssl://service:6650");
         assertTrue(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "pulsar+ssl://service:6650");
 
-        builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("https://service:6650");
+        builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("https://service:6650");
         assertTrue(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "https://service:6650");
 
-        builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("pulsar://service:6650").enableTls(true);
+        builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("pulsar://service:6650").enableTls(true);
         assertTrue(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "pulsar://service:6650");
 
-        builder = (ClientBuilderImpl)PulsarClient.builder().serviceUrl("pulsar+ssl://service:6650").enableTls(false);
+        builder = (ClientBuilderImpl) PulsarClient.builder().serviceUrl("pulsar+ssl://service:6650").enableTls(false);
         assertTrue(builder.conf.isUseTls());
         assertEquals(builder.conf.getServiceUrl(), "pulsar+ssl://service:6650");
     }
@@ -88,7 +88,7 @@ public class BuildersTest {
         String topicName = "test_src";
         MessageId messageId = new MessageIdImpl(1, 2, 3);
         Map<String, Object> config = new HashMap<>();
-        config.put("topicNames", ImmutableSet.of(topicName));
+        config.put("topicNames", Set.of(topicName));
         config.put("receiverQueueSize", 2000);
         ReaderBuilderImpl<byte[]> builder = (ReaderBuilderImpl<byte[]>) client.newReader()
             .startMessageId(messageId)
@@ -103,10 +103,11 @@ public class BuildersTest {
         assertEquals(((ReaderConfigurationData) obj).getStartMessageId(), messageId);
     }
 
-    @Test(expectedExceptions = {PulsarClientException.class}, expectedExceptionsMessageRegExp = ".* must be specified but they cannot be specified at the same time.*")
+    @Test(expectedExceptions = {PulsarClientException.class}, expectedExceptionsMessageRegExp =
+            ".* must be specified but they cannot be specified at the same time.*")
     public void shouldNotSetTwoOptAtTheSameTime() throws Exception {
         PulsarClient client = PulsarClient.builder().serviceUrl("pulsar://localhost:6650").build();
-        try (Reader reader = client.newReader().topic("abc").startMessageId(MessageId.earliest)
+        try (Reader reader = client.newReader().topic("abc").startMessageId(MessageId.latest)
                 .startMessageFromRollbackDuration(10, TimeUnit.HOURS).create()) {
             // no-op
         } finally {
@@ -114,7 +115,8 @@ public class BuildersTest {
         }
     }
 
-    @Test(expectedExceptions = {PulsarClientException.class}, expectedExceptionsMessageRegExp = ".* must be specified but they cannot be specified at the same time.*")
+    @Test(expectedExceptions = {PulsarClientException.class}, expectedExceptionsMessageRegExp =
+            ".* must be specified but they cannot be specified at the same time.*")
     public void shouldSetOneStartOpt() throws Exception {
         PulsarClient client = PulsarClient.builder().serviceUrl("pulsar://localhost:6650").build();
         try (Reader reader = client.newReader().topic("abc").create()) {
